# yacb

./: .dockerignore  .gitignore  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  Dockerfile  GROUND_TRUTH_PLAN.md  LICENSE  README.md  SETUP.md  config.yaml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
core/: __init__.py  __main__.py  config.py  main.py  onboarding_spec.py  runtime_monitor.py  setup.py
core/agent/: context.py  llm_router.py  loop.py  memory.py  onboarding.py  router.py  skills.py  tier_router.py
core/bus/: events.py  queue.py
core/channels/: base.py  commands.py  discord.py  telegram.py  whatsapp.py
core/cron/: heartbeat.py  service.py
core/prompts/: __init__.py  interaction_styles.yaml  loader.py  personality_presets.yaml  system.md
core/providers/: base.py  litellm_provider.py  registry.py
core/storage/: db.py
core/tools/: base.py  conversation_history.py  cron.py  filesystem.py  memory.py  message.py  shell.py  token_usage.py  web.py
core/utils/: logger.py  security.py  verbose.py
scripts/: runtime_monitor.py
site/: README.md  index.html  package-lock.json  package.json  vite.config.ts
skills/alive-pulse/: SKILL.md
skills/gog/: SKILL.md
tests/: test_channel_commands.py  test_context_bootstrap.py  test_model_validation.py  test_provider_fallback.py  test_reliability_hardening.py  test_restart_command.py  test_runtime_flows.py  test_setup_helpers.py  test_smoke.py  test_tier_router.py  test_web_safety.py
(+35 files in other folders)
